--- a/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
@@ -6,13 +6,14 @@
 
 <h2>Edit</h2>
 
-<h4>ProductModel</h4>
 <hr />
+<h4>ProductModel</h4>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
+            <input type="hidden" asp-for="ImageName" />
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
                 <input asp-for="ProductName" class="form-control" />
@@ -29,17 +30,28 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageName" class="control-label"></label>
-                <input asp-for="ImageName" class="form-control" />
-                <span asp-validation-for="ImageName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
-
+<hr />
+<h4>Product Image</h4>
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="UploadImage" enctype="multipart/form-data">
+            <input type="file" asp-for="ImageName" accept="image/x-png,image/gif,image/jpeg">
+            <input type="hidden" asp-for="ImageName">
+            <input type="hidden" asp-for="Description">
+            <input type="hidden" asp-for="ProductId">
+            <input type="hidden" asp-for="ProductName">
+            <input type="hidden" asp-for="Price">
+            <br>
+            <input type="submit" value="Save" class="btn btn-default" />
+        </form>
+    </div>
+</div>
+<br>
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
