--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
     <div class="wrapper">
         @if (User.Identity.IsAuthenticated)
-        {
+            {
             <nav id="sidebar">
                 <div class="sidebar-header">
                     <h3>Shopping Cart</h3>
@@ -25,53 +25,73 @@
                     <partial name="_partialShoppingCart" />
                 </div>
             </nav>
-        }
+            }
 
-    <div id="content">
-        @if (User.Identity.IsAuthenticated)
-        {
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <button type="button" id="sidebarCollapse" class="btn btn-info">
-                        <i class="fas fa-align-left"></i>
-                        <span><partial name="_partialCartSummary" /> </span>
-                    </button>
+        <div id="content">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <button type="button" id="sidebarCollapse" class="btn btn-info">
+                            <i class="fas fa-align-left"></i>
+                            <span><partial name="_partialCartSummary" /> </span>
+                        </button>
+                    </div>
+                </nav>
+            }
+            @*<header>
+                <h1 class="text-center">Web Shop</h1>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <partial name="_AdminMenuPartial" />
+                        <partial name="_LoginPartial" />
+                    </ul>
                 </div>
-            </nav>
-        }
+                <div>
+                    .....
+                </div>
+                <div>
+                    .....
+                </div>
+                </nav>
+                <div id="content">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <div class="container-fluid">
 
+                            <button type="button" id="sidebarCollapse" class="btn btn-info">
+                                <i class="fas fa-align-left"></i>
+                                <span>Toggle Sidebar</span>
+                            </button>
 
-
-
-
-
-
-
-
-        <header>
-            <h1 class="text-center">Web Shop</h1>
-            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <partial name="_AdminMenuPartial" />
-                    <partial name="_LoginPartial" />
-                </ul>
-            </div>
-        </header>
-        <main>
-            <div>
-                @RenderSection("Scripts", required: false)
-                @RenderBody()
-            </div>
-        </main>
-        <footer>
-            <p class="text-center">
-                &#9400; @DateTime.Now.ToShortDateString() Group 2
-            </p>
-        </footer>
-    </div>
-    </div>
+                        </div>
+                    </nav>*@
+                    <header>
+                        <h1 class="text-center">Web Shop</h1>
+                        <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                </li>
+                                <partial name="_AdminMenuPartial" />
+                                <partial name="_LoginPartial" />
+                            </ul>
+                        </div>
+                    </header>
+                    <main>
+                        <div>
+                            @RenderSection("Scripts", required: false)
+                            @RenderBody()
+                        </div>
+                    </main>
+                    <footer>
+                        <p class="text-center">
+                            &#9400; @DateTime.Now.ToShortDateString() Group 2
+                        </p>
+                    </footer>
+                </div>
+        </div>
 </body>
 </html>
