--- a/WebShop/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebShop/Views/Shared/_AdminMenuPartial.cshtml
@@ -1,11 +1,13 @@
-﻿@if (User.IsInRole("Admin"))
-{
+﻿@*@if (User.IsInRole("Admin"))
+{*@
     <li class="nav-item dropdown show">
         <a class ="dropdown-toggle nav-link text-dark" href="#" data-toggle="dropdown">Admin Tools</a>
-         <div class=dropdown-menu>
-        <a class="dropdown-item" asp-area="Admin" asp-controller="ProductModel" asp-action="Index">Product Manager</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" asp-area="Admin" asp-controller="UserModels" asp-action="Index">User Manager</a>
+        <div class=dropdown-menu>
+            <a class="dropdown-item" asp-area="Admin" asp-controller="ProductModel" asp-action="Index">Product Manager</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" asp-area="Admin" asp-controller="UserModels" asp-action="Index">User Manager</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" asp-area="" asp-controller="OrderModel" asp-action="Index">Order Manager</a>
         </div>
     </li>
-}
+@*}*@
