--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -1,45 +1,68 @@
-﻿<div id="wrapper">
-    <div class="overlay"></div>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/Sidebar.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="js/ModalBox.js" defer></script>
+    <script src="js/SideBar.js" defer></script>
+    <link rel="stylesheet" href="@Url.Content("~/css/site.css")" />
+    <title>@ViewBag.Title</title>
+</head>
+<body>
+    <div class="wrapper">
+        @if (User.Identity.IsAuthenticated)
+         {
+            <nav id="sidebar">
+                <div class="sidebar-header">
+                    <h3>Shopping Cart</h3>
+                </div>
+                <div id="cartInfo">
+                    <partial name="_partialShoppingCart" />
+                </div>
+            </nav>
+         }
 
-    <!-- Sidebar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
-        <ul class="nav sidebar-nav">
-            <li class="sidebar-brand">
-                <a href="#">
-                    Bootstrap 3
-                </a>
-            </li>
-            <li class="active">
-                <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-fw fa-cog"></i> Third page</a>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                    <li class="dropdown-header">Dropdown heading</li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#" class="close">Close</a>
-            </li>
-        </ul>
-    </nav><!-- /#sidebar-wrapper -->
-
-    <div id="page-content-wrapper">
-        <button type="button" class="hamburger open-nav is-closed animated fadeInLeft">
-            <span class="hamb-top"></span>
-            <span class="hamb-middle"></span>
-            <span class="hamb-bottom"></span>
-        </button>
-        <div class="container">
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae voluptatem, quisquam accusamus maiores laudantium animi commodi officiis sequi ad quo laborum ab reiciendis labore tempore veniam numquam atque eos, deleniti recusandae non, minus aliquid incidunt fugit. Quidem blanditiis atque suscipit illum delectus corrupti asperiores, quibusdam eos libero officiis, mollitia odio facere assumenda modi ratione, consequuntur quia saepe nisi ea culpa. Praesentium deleniti earum laboriosam eligendi iusto accusamus at voluptate sequi? Libero sequi aperiam architecto quidem deleniti quis et aliquid nisi ipsum necessitatibus veniam eius at neque, aut labore rem dolor perferendis earum eligendi quos praesentium cupiditate repellendus? Similique esse nostrum, aspernatur praesentium adipisci ipsam. Aliquam assumenda, illum quasi. Quae ab mollitia ipsam molestias iste deleniti beatae ad, sit soluta illum, fuga tempore consequatur dolore sequi inventore eum. Sequi suscipit libero, nobis magnam dicta id animi repellat quaerat expedita saepe eveniet eos voluptatibus culpa nihil amet a excepturi asperiores soluta, ex eaque. Doloremque itaque autem amet commodi corporis, quod est minima unde perferendis.
-            </p>
-        </div><!-- /.container -->
-    </div><!-- /#page-content-wrapper -->
-</div><!-- /#wrapper -->
+        <div id="content">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <button type="button" id="sidebarCollapse" class="btn btn-info">
+                            <i class="fas fa-align-left"></i>
+                            <span><partial name="_partialCartSummary" /> </span>
+                        </button>
+                    </div>
+                </nav>
+            }
+           
+            <header>
+                <h1 class="text-center">Web Shop</h1>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <partial name="_AdminMenuPartial" />
+                        <partial name="_LoginPartial" />
+                    </ul>
+                </div>
+            </header>
+            <main>
+                <div>
+                    @RenderSection("Scripts", required: false)
+                    @RenderBody()
+                </div>
+            </main>
+            <footer>
+                <p class="text-center">
+                    &#9400; @DateTime.Now.ToShortDateString() Group 2
+                </p>
+            </footer>
+        </div>
+        </div>
+</body>
+</html>
