--- a/WebShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,43 +14,22 @@
 </head>
 <body>
     <div class="wrapper">
-        @if (User.Identity.IsAuthenticated)
-        {
-            <nav id="sidebar">
-                <div class="sidebar-header">
-                    <h3>Shopping Cart</h3>
-                </div>
-                <div>
-                    .....
-                </div>
-                <div>
-                    .....
-                </div>
-            </nav>
-        }
+
+
         <div id="content">
-            @if (User.Identity.IsAuthenticated)
-            {
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-
-                        <button type="button" id="sidebarCollapse" class="btn btn-info">
-                            <i class="fas fa-align-left"></i>
-                            <span>Toggle Sidebar</span>
-                        </button>
-
-                    </div>
-                </nav>
-            }
+   
+           
             <header>
                 <h1 class="text-center">Web Shop</h1>
-                <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-                    <div class="container">
-                        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
                         <partial name="_AdminMenuPartial" />
                         <partial name="_LoginPartial" />
-                    </div>
-                </nav>
+                    </ul>
+                </div>
             </header>
             <main>
                 <div>
@@ -65,6 +43,6 @@
                 </p>
             </footer>
         </div>
-    </div>
+        </div>
 </body>
 </html>
