--- a/WebShop/Areas/Admin/Views/UserModel/CreateUser.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/CreateUser.cshtml
@@ -22,25 +22,24 @@
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Street" class="control-label"></label>
-                <input asp-for="Street" class="form-control" />
-                <span asp-validation-for="Street" class="text-danger"></span>
+                <label asp-for="Discriminator" class="control-label">UserRole (Discriminator)</label>
+                <input asp-for="Discriminator" class="form-control" />
+                <span asp-validation-for="Discriminator" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="City" class="control-label"></label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
 
-
             <div class="form-group">
-                <label asp-for="Discriminator" class="control-label"></label>
-                <input asp-for="Discriminator" class="form-control" />
-                <span asp-validation-for="Discriminator" class="text-danger"></span>
+                <label asp-for="Street" class="control-label"></label>
+                <input asp-for="Street" class="form-control" />
+                <span asp-validation-for="Street" class="text-danger"></span>
             </div>
-
-
 
             <div class="form-group">
                 <label asp-for="ZipCode" class="control-label"></label>
