--- a/WebShop/Views/Shared/_partialEdit.cshtml
+++ b/WebShop/Views/Shared/_partialEdit.cshtml
@@ -10,23 +10,26 @@
     </div>
     <!-- Main modal -->
     <div class="modal-body">
-        <form asp-action="Edit" asp-controller="Home">
+        <form asp-controller="Home" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProductId" />
-            <input type="hidden" asp-for="ImageName" />
+            <input type="hidden" asp-for="ImageName">
+            <input type="hidden" asp-for="Description">
+            <input type="hidden" asp-for="ProductId">
+            <input type="hidden" asp-for="ProductName">
+            <input type="hidden" asp-for="Price">
             <div class="form-group">
                 <label asp-for="ProductName" class="col-form-label">Product name:</label>
-                <input type="text" class="form-control" id="product-name" placeholder="@Model.ProductName">
+                <input type="text" asp-for="ProductName" class="form-control" id="product-name" placeholder="@Model.ProductName">
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="col-form-label">Price:</label>
-                <input type="text" class="form-control" id="price" placeholder="@Model.Price">
+                <input type="text" asp-for="Price" class="form-control" id="price" placeholder="@Model.Price">
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="col-form-label">Description:</label>
-                <textarea class="form-control" id="description" placeholder="@Model.Description"></textarea>
+                <textarea class="form-control" asp-for="Description" id="description" placeholder="@Model.Description"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <input type="submit" value="Save changes" class="btn btn-default" />
