--- a/WebShop/Views/Shared/_partialEdit.cshtml
+++ b/WebShop/Views/Shared/_partialEdit.cshtml
@@ -15,21 +15,23 @@
             <input type="hidden" asp-for="ProductId" />
             <input type="hidden" asp-for="ImageName" />
             <div class="form-group">
-                <label asp-for="ProductName" class="col-form-label">Product name:</label>
-                <input type="text" class="form-control" id="product-name" placeholder="@Model.ProductName">
+                <label asp-for="ProductName" class="control-label">Product name</label>
+                <input asp-for="ProductName" class="form-control" placeholder="@Model.ProductName"/>
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price" class="col-form-label">Price:</label>
-                <input type="text" class="form-control" id="price" placeholder="@Model.Price">
-                <span asp-validation-for="Price" class="text-danger"></span>
+                <label asp-for="Price" class="control-label">Price</label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger" placeholder="@Model.Price"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="col-form-label">Description:</label>
-                <textarea class="form-control" id="description" placeholder="@Model.Description"></textarea>
+                <label asp-for="Description" class="control-label">Description</label>
+                <input asp-for="Description" class="form-control"  placeholder="@Model.Description"/>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <input type="submit" value="Save changes" class="btn btn-default" />
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
         </form>
         <hr />
         <!-- Image -->
