--- a/WebShop/Views/Shared/_partialEdit.cshtml
+++ b/WebShop/Views/Shared/_partialEdit.cshtml
@@ -10,28 +10,11 @@
     </div>
     <!-- Main modal -->
     <div class="modal-body">
-        <form asp-controller="Home" asp-action="Edit">
+        <form asp-action="Edit" asp-controller="Home">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ImageName">
-            <input type="hidden" asp-for="Description">
-            <input type="hidden" asp-for="ProductId">
-            <input type="hidden" asp-for="ProductName">
-            <input type="hidden" asp-for="Price">
+            <input type="hidden" asp-for="ProductId" />
+            <input type="hidden" asp-for="ImageName" />
             <div class="form-group">
-<<<<<<< HEAD
-                <label asp-for="ProductName" class="col-form-label">Product name:</label>
-                <input type="text" asp-for="ProductName" class="form-control" id="product-name" placeholder="@Model.ProductName">
-                <span asp-validation-for="ProductName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="col-form-label">Price:</label>
-                <input type="text" asp-for="Price" class="form-control" id="price" placeholder="@Model.Price">
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="col-form-label">Description:</label>
-                <textarea class="form-control" asp-for="Description" id="description" placeholder="@Model.Description"></textarea>
-=======
                 <label asp-for="ProductName" class="control-label">Product name</label>
                 <input asp-for="ProductName" class="form-control" placeholder="@Model.ProductName"/>
                 <span asp-validation-for="ProductName" class="text-danger"></span>
@@ -44,7 +27,6 @@
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Description</label>
                 <input asp-for="Description" class="form-control"  placeholder="@Model.Description"/>
->>>>>>> EditOrder
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
