--- a/WebShop/Areas/Admin/Views/UserModel/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Index.cshtml
@@ -21,6 +21,12 @@
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+                        <th>
+                @Html.DisplayNameFor(model => model.PhoneNumber)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Street)
             </th>
             <th>
@@ -38,6 +44,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+
+
             <td>
                 @Html.DisplayFor(modelItem => item.Street)
             </td>
