--- a/WebShop/Areas/Admin/Views/OrderModel/DeletePart.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/DeletePart.cshtml
@@ -50,7 +50,8 @@
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ProductId" />
+        @*<input type="hidden" asp-for="ProductId" />*@
+        <input type="hidden" asp-for="OrderId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
     </form>
