--- a/WebShop/Areas/Admin/Views/OrderModel/Details.cshtml
+++ b/WebShop/Areas/Admin/Views/OrderModel/Details.cshtml
@@ -55,13 +55,14 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
                 <input type="hidden" asp-for="@item.ProductId" />
-                <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                <input type="hidden" asp-for="@item.OrderId" />
+                <a asp-action="Delete">Delete</a>
             </td>
         </tr>
         }
     </tbody>
 </table>
 <div>
-    @*<a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a>*@
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Orderlist</a>
+    @*  <a asp-action="Details">Back to Details</a>*@
 </div>
